Form echoes your login and password

--- a/templates/login.html
+++ b/templates/login.html
@@ -37,8 +37,8 @@
 
 <body>
     <div class="placeholder"></div>
-    <form>
-        <input type="text" name="login" />
+    <form method="POST" action="/login">
+        <input type="text" name="username" />
         <input type="text" name="password" />
         <input type="submit" value="Войти" />
 
