Hash instead of raw password, auth system update

--- a/templates/login.html
+++ b/templates/login.html
@@ -39,7 +39,7 @@
     <div class="placeholder"></div>
     <form method="POST" action="/login">
         <input type="text" name="username" />
-        <input type="text" name="password" />
+        <input type="password" name="password" />
         <input type="submit" value="Войти" />
 
     </form>
